[tool.poetry]
name = "safe-pass"
version = "0.1.0"
description = "A telegram bot for managing passwords."
authors = ["wwaramii <wwaramii@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.scripts]
safe_pass = "safe_pass.bot:main"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.6.0"
pantherdb = "^2.1.0"
pydantic = "^2.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
