[tool.poetry]
name = "safe-pass"
version = "0.1.0"
description = "A telegram bot for managing passwords."
authors = ["wwaramii <wwaramii@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.scripts]
safe_pass = "safe_pass.bot:main"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = {extras = ["i18n"], version = "^3.6.0"}
pantherdb = "^2.1.0"
pydantic = "^2.7.1"
cryptography = "^42.0.7"
aiohttp-socks = "^0.8.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
